add tables to trunc/load

--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -23,6 +23,7 @@
           <option> c3demand.fct_forecastunits_dept </option>
           <option> c3demand.fct_fpro_fc_overrides </option>
           <option> c3demand.fct_fpro_hot_list </option>
+          <option> c3demand.fct_future_ranged_store_change </option>
           <option> c3demand.fct_item_gross_ups </option>
           <option> c3demand.fct_item_transition </option>
           <option> c3demand.fct_le_fc_inputs </option>
