--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -44,6 +44,7 @@
           <option> c3demand.fct_total_bu_forecast </option>
           <option> c3demand.fct_total_gu_item_format_fc </option>
           <option> c3demand.fct_forecast_same_store </option>
+          <option> c3demand.fct_future_ranged_store_change </option>
           <option> c3demand.fct_post_launch_le_fc </option>
           <option> c3dss.fct_event_forecast </option>
           <option> c3dss.fct_brand_event_plan </option>
