--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -89,6 +89,26 @@
                 </ul>
               </li>
           <% end %>
+          <% if direct2_user? %>
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  CFC - A1W <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to " 01 - Select orders from OMS", select_oms_orders_path %></li>
+                  <li><%= link_to " 01a - Select orders from OMS(Do not check OMS)", select_oms_orders2_path %></li>
+                  <li><%= link_to " 02 - Bulk Pick selection", select_bulk_pick_path %></li>
+                  <li><%= link_to " 03 - Gift Message Print", print_gift_message_path %></li>
+                  <li><%= link_to " 04 - Dispatch Parcels", dispatch_the_parcel_path %></li>
+                  <li><%= link_to " 05 - Complete the Order", ship_the_parcel_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Order Counts", order_count_path %></li>
+                  <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
+                  <li><%= link_to "Unlock Order", unlock_the_order_path %></li>
+                  <li><%= link_to "Reprint Gift Message", reprint_gift_message_path %></li>
+                </ul>
+              </li>
+          <% end %>
           <% if signed_in? %>
             <li><%= link_to "Users", users_path %></li>
             <li id="fat-menu" class="dropdown">
