--- a/app/views/static_pages/truncate.html.erb
+++ b/app/views/static_pages/truncate.html.erb
@@ -10,7 +10,6 @@
           <option> c3demand.fct_base_replen_fc </option>
           <option> c3demand.fct_base_replen_fc_item_format </option>
           <option> c3demand.fct_brand_forecast_splits </option>
-          <option> c3demand.fct_brand_plan_splits </option>
           <option> c3demand.fct_event_fc </option>
           <option> c3demand.fct_fc_reco_adjustments </option>
           <option> c3demand.fct_forecast_same_store </option>
@@ -53,6 +52,7 @@
           <option> c3dss.fct_brand_plan </option>
           <option> c3dss.fct_brand_plan_header </option>
           <option> c3dss.fct_brand_plan_header_element </option>
+          <option> c3dss.fct_brand_plan_splits </option>
           <option> c3dss.fct_planned_store </option>
           <option> c3dss.fct_planned_vendor </option>
           <option> c3dss.fct_store_forecast_raw </option>
