gift messages for a1w

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -95,17 +95,10 @@
                   CFC - A1W <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to " 01 - Select orders from OMS", select_oms_orders_path %></li>
-                  <li><%= link_to " 01a - Select orders from OMS(Do not check OMS)", select_oms_orders2_path %></li>
-                  <li><%= link_to " 02 - Bulk Pick selection", select_bulk_pick_path %></li>
-                  <li><%= link_to " 03 - Gift Message Print", print_gift_message_path %></li>
-                  <li><%= link_to " 04 - Dispatch Parcels", dispatch_the_parcel_path %></li>
-                  <li><%= link_to " 05 - Complete the Order", ship_the_parcel_path %></li>
-                  <li class="divider"></li>
                   <li><%= link_to "Order Counts", order_count_path %></li>
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
                   <li><%= link_to "Unlock Order", unlock_the_order_path %></li>
-                  <li><%= link_to "Reprint Gift Message", reprint_gift_message_path %></li>
+                  <li><%= link_to "Print Gift Message", print_gift_message2_path %></li>
                 </ul>
               </li>
           <% end %>
