added unlock, reset order screens and code

--- a/app/views/static_pages/load.html.erb
+++ b/app/views/static_pages/load.html.erb
@@ -54,7 +54,7 @@
           <option> c3dss.fct_brand_plan </option>
           <option> c3dss.fct_brand_plan_header </option>
           <option> c3dss.fct_brand_plan_header_element </option>
-          <option> c3dss.fct_bran_plan_splits </option>
+          <option> c3dss.fct_brand_plan_splits </option>
           <option> c3dss.fct_planned_store </option>
           <option> c3dss.fct_planned_vendor </option>
           <option> c3dss.fct_store_forecast_raw </option>
