--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -97,7 +97,8 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "Order Counts", order_count_path %></li>
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
-                  <li><%= link_to "Unlock Order", unlock_the_order_path %></li>
+                  <li><%= link_to "Reset & Unlock Order", unlock_the_order_a1w_path %></li>
+                  <li><%= link_to "Reload Order", reload_the_order_a1w_path %></li>
                   <li><%= link_to "Print Gift Message", print_gift_message2_path %></li>
                 </ul>
               </li>
