added purchase order cancel

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -52,6 +52,7 @@
                   <li class="divider"></li>
                   <li><%= link_to "Purchase Order Status", fct_axima_controls_path %></li>
                   <li><%= link_to "Vendor Lead times", fct_vendor_axima_leadtimes_path %></li>
+                  <li><%= link_to "Cancel Purchase Order @ Axima", cancel_purchase_order_path %></li>
                 </ul>
               </li>
           <% end %>
