further work for cfc to a1w project

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -100,7 +100,9 @@
                   <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
                   <li><%= link_to "Reset & Unlock Order", unlock_the_order_a1w_path %></li>
                   <li><%= link_to "Reload Order", reload_the_order_a1w_path %></li>
+                  <li class="divider"></li>
                   <li><%= link_to "Print Gift Message", print_gift_message2_path %></li>
+                  <li><%= link_to "Special Instructions", '#' %></li>
                 </ul>
               </li>
           <% end %>
