a1w order browse and special instructions

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -102,7 +102,7 @@
                   <li><%= link_to "Reload Order", reload_the_order_a1w_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Print Gift Message", print_gift_message2_path %></li>
-                  <li><%= link_to "Special Instructions", '#' %></li>
+                  <li><%= link_to "Special Instructions", mb_order_status_a1ws_path %></li>
                 </ul>
               </li>
           <% end %>
