added special instructions view

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -97,12 +97,12 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Order Counts", order_count_path %></li>
-                  <li><%= link_to "Order Browse", mb_order_statuses_path %></li>
+                  <li><%= link_to "Order Browse", mb_order_status_a1ws_path %></li>
                   <li><%= link_to "Reset & Unlock Order", unlock_the_order_a1w_path %></li>
                   <li><%= link_to "Reload Order", reload_the_order_a1w_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Print Gift Message", print_gift_message2_path %></li>
-                  <li><%= link_to "Special Instructions", mb_order_status_a1ws_path %></li>
+                  <li><%= link_to "Special Instructions", fct_special_instructions_path %></li>
                 </ul>
               </li>
           <% end %>
