--- a/app/views/fct_special_instructions/index.html.erb
+++ b/app/views/fct_special_instructions/index.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'CFC A1w Orders') %>
-<h1>CFC A1w Orders</h1>
+<% provide(:title, 'Special Instructions') %>
+<h1>Special Instructions</h1>
 
 
 <form class="form-horizontal">
@@ -10,7 +10,7 @@
 
     <!-- Search input-->
     <div class="control-group">
-      <label class="control-label" for="search"> Order #</label>
+      <label class="control-label" for="search"> SSCC or Order #</label>
       <div class="controls">
         <input id="search" name="search" class="input-medium search-query" type="text" autofocus="true">
       </div>
@@ -25,19 +25,17 @@
   <table class="table table-striped">
     <tr>
       <th> Order # </th>
-      <th> Web Order GUID </th>
       <th> Priority </th>
-      <th> Order Status </th>
-      <th> Connote # </th>
+      <th> Special Instructions </th>
+      <th> SSCC # </th>
     </tr>
 
-  <% @mb_order_status_a1ws.each do |mb_order| %>
+  <% @fct_special_instructions.each do |special_instr| %>
       <tr>
-        <td><%= mb_order.order_number %></td>
-        <td><%= mb_order.order_guid %></td>
-        <td><%= mb_order.priority %></td>
-        <td><%= mb_order.order_ecom_status %></td>
-        <td><%= mb_order.connote_reference %></td>
+        <td><%= special_instr.order_number %></td>
+        <td><%= special_instr.priority %></td>
+        <td><%= special_instr.delivery_instructions %></td>
+        <td><%= special_instr.sscc %></td>
       </tr>
   <% end %>
   </table>
