--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -85,7 +85,7 @@
                   <li><%= link_to "Reprint Gift Message", reprint_gift_message_path %></li>
                   <li><%= link_to "Archive orders(non functional)", archive_orders_path %></li>
                   <li class="divider"></li>
-                  <li><%= link_to "Location to Item Maintenance", direct_bin_contents_path %></li>
+                  <li><%#= link_to "Location to Item Maintenance", direct_bin_contents_path %></li>
                   <li><%= link_to "Pick Path Maintenance", pick_paths_path %></li>
                 </ul>
               </li>
