changing demand table loads

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,13 +42,17 @@
                   <li><%= link_to "Truncate tables", truncate_path %></li>
                   <li><%= link_to "Load tables", load_path %></li>
                   <li class="divider"></li>
-                  <li><%= link_to "Upload tables - Mecca", load_mecca_path %></li>
-                  <li><%= link_to "Load to Live - Mecca", live_load_mecca_path %></li>
-                  <li><%= link_to "Truncate tables - Mecca", truncate_mecca_path %></li>
+                  <li><%= link_to "Upload tables - MP1", load_mp1_path %></li>
+                  <li><%= link_to "Load to Live - MP1", live_load_mp1_path %></li>
+                  <li><%= link_to "Truncate tables - MP1", truncate_mp1_path %></li>
                   <li class="divider"></li>
-                  <li><%= link_to "Upload tables - Kit/Maxima", load_km_path %></li>
-                  <li><%= link_to "Load to Live  - Kit/Maxima", live_load_km_path %></li>
-                  <li><%= link_to "Truncate tables - Kit/Maxima", truncate_km_path %></li>
+                  <li><%= link_to "Upload tables - MP2", load_mp2_path %></li>
+                  <li><%= link_to "Load to Live  - MP2", live_load_mp2_path %></li>
+                  <li><%= link_to "Truncate tables - MP2", truncate_mp2_path %></li>
+                  <li class="divider"></li>
+                  <li><%= link_to "Upload tables - MP3", load_mp3_path %></li>
+                  <li><%= link_to "Load to Live  - MP3", live_load_mp3_path %></li>
+                  <li><%= link_to "Truncate tables - MP3", truncate_mp3_path %></li>
                   <li class="divider"></li>
                   <li><%= link_to "Purchase Order Status", fct_axima_controls_path %></li>
                   <li><%= link_to "Vendor Lead times", fct_vendor_axima_leadtimes_path %></li>
