changes to demand table loads

--- a/app/views/static_pages/live_mp1.html.erb
+++ b/app/views/static_pages/live_mp1.html.erb
@@ -1,8 +1,8 @@
-<% provide(:title, 'Load live data - Mecca') %>
+<% provide(:title, 'Load live data - MP1') %>
 <h2>Load to live - Mecca</h2>
 
 
-<%= form_tag(controller: 'static_pages', action: 'live_table_mecca', method: "post") do %>
+<%= form_tag(controller: 'static_pages', action: 'live_table_mp1', method: "post") do %>
     <!-- Form Name -->
     <legend>Choose a table to load to live !</legend>
     This copies data from the matching upload table to the live table. </p>
