fixed routing again, changed headings

--- a/app/views/static_pages/live_mp1.html.erb
+++ b/app/views/static_pages/live_mp1.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Load live data - MP1') %>
-<h2>Load to live - Mecca</h2>
+<h2>Load to live - MP1</h2>
 
 
 <%= form_tag(controller: 'static_pages', action: 'live_table_mp1', method: "post") do %>
