--- a/app/views/static_pages/live_mp3.html.erb
+++ b/app/views/static_pages/live_mp3.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Load live data - MP3') %>
-<h2>Load to live - Mecca</h2>
+<h2>Load to live - MP3</h2>
 
 
 <%= form_tag(controller: 'static_pages', action: 'live_table_mp3', method: "post") do %>
