--- a/app/views/static_pages/load_mp1.html.erb
+++ b/app/views/static_pages/load_mp1.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Load data - MP1') %>
-<h2>Load - Mecca</h2>
+<h2>Load - MP1</h2>
 
 
 <%= form_tag(controller: 'static_pages', action: 'load_table_mp1', method: "post") do %>
