--- a/app/views/static_pages/load_mp3.html.erb
+++ b/app/views/static_pages/load_mp3.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Load data - MP3') %>
-<h2>Load - Mecca</h2>
+<h2>Load - MP3</h2>
 
 
 <%= form_tag(controller: 'static_pages', action: 'load_table_mp3', method: "post") do %>
