--- a/app/views/static_pages/truncate_mp3.html.erb
+++ b/app/views/static_pages/truncate_mp3.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Truncate - MP3') %>
-<h2>Truncate - Mecca</h2>
+<h2>Truncate - MP3</h2>
 
 <%= form_tag(controller: 'static_pages', action: 'table_truncate_mp3', method: "post") do %>
     <!-- Form Name -->
