--- a/app/views/static_pages/live_mp2.html.erb
+++ b/app/views/static_pages/live_mp2.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Load live data - MP2') %>
-<h2>Load to live - Mecca</h2>
+<h2>Load to live - MP2</h2>
 
 
 <%= form_tag(controller: 'static_pages', action: 'live_table_mp2', method: "post") do %>
