--- a/app/views/static_pages/truncate_mp1.html.erb
+++ b/app/views/static_pages/truncate_mp1.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Truncate - MP1') %>
-<h2>Truncate - Mecca</h2>
+<h2>Truncate - MP1</h2>
 
 <%= form_tag(controller: 'static_pages', action: 'table_truncate_mp1', method: "post") do %>
     <!-- Form Name -->
