--- a/app/views/mb_order_status_a1ws/index.html.erb
+++ b/app/views/mb_order_status_a1ws/index.html.erb
@@ -29,6 +29,7 @@
       <th> Priority </th>
       <th> Order Status </th>
       <th> Connote # </th>
+      <th> RPRO Invoice #</th>
     </tr>
 
   <% @mb_order_status_a1ws.each do |mb_order| %>
@@ -38,6 +39,7 @@
         <td><%= mb_order.priority %></td>
         <td><%= mb_order.order_ecom_status %></td>
         <td><%= mb_order.connote_reference %></td>
+        <td><%= mb_order.created_rpro_invoice_no %></td>
       </tr>
   <% end %>
   </table>
