carton select for asn

--- a/app/views/fct_wms_carton_asn_controls/index.html.erb
+++ b/app/views/fct_wms_carton_asn_controls/index.html.erb
@@ -27,7 +27,8 @@
       <th> SSCC </th>
       <th> Transfer Order # </th>
       <th> Store Code </th>
-      <th> Date Shipped</th>
+      <th> Date Shipped </th>
+      <th> Receive </th>
     </tr>
 
   <% @fct_wms_carton_asn_controls.each do |fct_wms_carton_asn_control| %>
@@ -36,9 +37,14 @@
         <td><%= fct_wms_carton_asn_control.to_number %></td>
         <td><%= fct_wms_carton_asn_control.store_code %></td>
         <td><%= fct_wms_carton_asn_control.date_shipped %></td>
+        <td><%= check_box_tag 'check_exported[]', fct_wms_carton_asn_control.exported, checked = false %></td>
       </tr>
   <% end %>
   </table>
+  </p>
+    <div>
+       <%= submit_tag 'Select Cartons!', class: 'btn btn-warning btn-large' %>
+    </div>
 </ul>
 
 <%= will_paginate %>
